@@ -24,8 +24,8 @@
 //
 // -----------------------------------------------------------------
 // File:          $RCSfile: GlutDriver.cpp,v $
-// Date modified: $Date: 2002-03-19 01:37:26 $
-// Version:       $Revision: 1.10 $
+// Date modified: $Date: 2002-03-19 01:59:21 $
+// Version:       $Revision: 1.11 $
 // -----------------------------------------------------------------
 //
 ////////////////// <GK heading END do not edit this line> ///////////////////
@@ -35,25 +35,11 @@
 
 // Only compile in the create/destroy code if we're building a library
 #ifdef XDL_BUILD_DLL
-#ifdef __cplusplus
-extern "C" {
-#endif
-
-XDL_FUNC gk::ISystemDriver*
+extern "C" XDL_FUNC gk::ISystemDriver*
 createSystemDriver()
 {
    return new gk::GlutDriver();
 }
-
-XDL_FUNC void
-destroySystemDriver( gk::ISystemDriver* driver )
-{
-   delete driver;
-}
-
-#ifdef __cplusplus
-}
-#endif
 #endif // XDL_BUILD_DLL
 
 namespace gk {
